// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Venezuela shows how Corbyn’s socialism works
    </Text>
    <ArticleFlags
      color={null}
      flags={
        Array [
          "EXCLUSIVE",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </View>
</Link>
`;

exports[`2. tile b 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color={null}
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
      <Text>
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
    </View>
  </View>
</Link>
`;

exports[`3. tile c 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color={null}
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`4. tile d 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Image
        aspectRatio={1.5}
        uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color={null}
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`5. tile e 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Image
        aspectRatio={0.8}
        uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
      />
    </View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color={null}
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`6. tile f 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Venezuela shows how Corbyn’s socialism works
    </Text>
    <Text
      accessibilityRole="heading"
      aria-level="4"
    >
      Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
    </Text>
    <ArticleFlags
      color={null}
      flags={
        Array [
          "EXCLUSIVE",
        ]
      }
    />
    <Text>
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
  </View>
</Link>
`;

exports[`7. tile g 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Image
        aspectRatio={1}
        borderRadius={187.5}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color={null}
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`8. tile i 1`] = `
<Link
  url="/article/123"
>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </View>
  <View>
    <View>
      <Text>
        LABEL
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Venezuela shows how Corbyn’s socialism works
    </Text>
    <ArticleFlags
      color={null}
      flags={
        Array [
          "EXCLUSIVE",
        ]
      }
    />
  </View>
</Link>
`;

exports[`9. tile j 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Image
        aspectRatio={1.5}
        uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color={null}
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`10. tile l 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color={null}
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </View>
</Link>
`;

exports[`11. tile m 1`] = `
<Link>
  <View>
    <View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Driving Off
      </Text>
      <Text
        accessibilityRole="heading"
        aria-level="4"
      >
        Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
      </Text>
      <ArticleFlags
        color={null}
      />
    </View>
  </View>
</Link>
`;

exports[`12. tile n 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <Image
        aspectRatio={1}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
      <Text>
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
    </View>
  </View>
</Link>
`;

exports[`13. tile o 1`] = `
<Link
  url="/article/123"
>
  <View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </View>
</Link>
`;
